--- a/.github/workflows/generate-apk-release.yml
+++ b/.github/workflows/generate-apk-release.yml
@@ -66,7 +66,12 @@ jobs:
       - name: Get version
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-        
+
+      - name: ConfigOrganze
+        id: organize_config
+        run: |
+          tar -czvf  ${{ env.main_project_module }}/build/outputs/apk/release.tar.gz ${{ env.main_project_module }}/build/outputs/apk/release/
+          
       - name: Release
         uses: softprops/action-gh-release@v1
 #      if: startsWith(github.ref, 'refs/tags/')
@@ -75,5 +80,4 @@ jobs:
         with:
           tag_name: ${{ steps.get_version.outputs.VERSION }}
           files: |
-            ${{ env.main_project_module }}/build/outputs/apk/release/
-
+           ${{ env.main_project_module }}/build/outputs/apk/release.tar.gz
