--- a/.github/workflows/generate-apk-release.yml
+++ b/.github/workflows/generate-apk-release.yml
@@ -10,13 +10,13 @@ env:
   playstore_name: Feng
 
 on:
-
   push:
-    branches:
-      - 'release/**'
+    tags:
+    - 'v*'
+
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  # workflow_dispatch:
 
 jobs:
   build:
