--- a/.github/workflows/generate-apk-release.yml
+++ b/.github/workflows/generate-apk-release.yml
@@ -65,7 +65,8 @@ jobs:
           
       - name: Get version
         id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        run: echo "${GITHUB_REF/refs\/tags\//}" >> $env:GITHUB_OUTPUT
+             # echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
 
       - name: ConfigOrganze
         id: organize_config
