--- a/.github/workflows/generate-apk-release.yml
+++ b/.github/workflows/generate-apk-release.yml
@@ -57,10 +57,10 @@ jobs:
         run: ./gradlew assemble
 
       - name: Sign APK
-        id: sign_apk
+        id: sign
         uses: r0adkll/sign-android-release@v1
         with:
-          releaseDirectory: ${{ env.main_project_module }}/build/outputs/apk/release
+          releaseDirectory: app/build/outputs/bundle/release
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
           alias: ${{ secrets.ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
