--- a/.github/workflows/generate-apk-release.yml
+++ b/.github/workflows/generate-apk-release.yml
@@ -83,7 +83,7 @@ jobs:
         run: |
           cd ${{ env.main_project_module }}/build/outputs/apk/
           mv ./release/app-release-unsigned-signed.apk ./release/app-release-signed.apk
-          rm -rf app-release-un*.apk
+          rm -rf ./release/app-release-un*.apk
           tar -czvf  release.tar.gz ./release
     
       - name: Release
