--- a/.github/workflows/generate-apk-release.yml
+++ b/.github/workflows/generate-apk-release.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       # Set Current Date As Env Variable
       - name: Set current date as env variable
@@ -35,7 +35,7 @@ jobs:
         run: echo "repository_name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
 
       - name: Set Up JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu' # See 'Supported distributions' for available options
           java-version: '17'
@@ -58,7 +58,7 @@ jobs:
 
       - name: Sign APK
         id: sign
-        uses: ilharp/sign-android-release@v1
+        uses: ilharp/sign-android-release@nightly
         with:
           releaseDir: ${{ env.main_project_module }}/build/outputs/apk/release
           signingKey: ${{ secrets.SIGNING_KEY }}
@@ -89,7 +89,7 @@ jobs:
              # echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
     
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
 #      if: startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
