一、常规升级修复 1、去掉存储权限申请，导出导入配置改用uri请求。 2、去掉RxPermissions\rxjava3等库。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,10 @@
     <!--光明正大读取应用列表权限-->
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
       tools:ignore="QueryAllPackagesPermission" />
-  <!--手机存储-->
-   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-   <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+  <!--手机存储,使用intent请求代替-->
+<!--   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
+<!--   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
+<!--   <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />-->
 
 
    <application
