--- a/.github/workflows/generate-apk-release.yml
+++ b/.github/workflows/generate-apk-release.yml
@@ -14,13 +14,8 @@ on:
     tags:
     - 'v*'
 
-
-  # Allows you to run this workflow manually from the Actions tab
-  # workflow_dispatch:
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -33,6 +28,16 @@ jobs:
       # Set Repository Name As Env Variable
       - name: Set repository name as env variable
         run: echo "repository_name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
+
+      # Extract tag name as version name
+      - name: Extract tag name as version name
+        run: echo "version_name=${GITHUB_REF##*/}" >> $GITHUB_ENV
+
+      # Modify build.gradle.kts to set versionName
+      - name: Modify build.gradle.kts to set versionName
+        run: |
+          VERSION_NAME=${{ env.version_name }}
+          sed -i "s/versionName \".*\"/versionName \"$VERSION_NAME\"/" ${{ env.main_project_module }}/build.gradle.kts
 
       - name: Set Up JDK
         uses: actions/setup-java@v4
@@ -65,7 +70,7 @@ jobs:
           keyAlias: ${{ secrets.ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
-          
+
       - name: ConfigOrganze
         id: organize_config
         run: |
@@ -82,18 +87,12 @@ jobs:
         with:
           name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - APK(s) release generated
           path: ${{ env.main_project_module }}/build/outputs/apk/release/
-          
-      - name: Get version
-        id: get_version
-        run: echo "${GITHUB_REF/refs\/tags\//}" >> $env:GITHUB_OUTPUT
-             # echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-    
+
       - name: Release
         uses: softprops/action-gh-release@v2
-#      if: startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.get_version.outputs.VERSION }}
+          tag_name: ${{ env.version_name }}
           files: |
-           ${{ env.main_project_module }}/build/outputs/apk/release.tar.gz
+            ${{ env.main_project_module }}/build/outputs/apk/release.tar.gz
