--- a/.github/workflows/generate-apk-release.yml
+++ b/.github/workflows/generate-apk-release.yml
@@ -1,18 +1,16 @@
-permissions:
-  contents: write
 name: Generated APK (Upload - Create Artifact To Github Action)
 
-env:
-  # The name of the main module repository
-  main_project_module: app
+permissions:
+  contents: write
 
-  # The name of the Play Store
+env:
+  main_project_module: app
   playstore_name: Feng
 
 on:
   push:
     tags:
-    - 'v*'
+      - 'v*'
 
 jobs:
   build:
@@ -29,35 +27,36 @@ jobs:
       - name: Set repository name as env variable
         run: echo "repository_name=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
 
-      # Extract tag name as version name
-      - name: Extract tag name as version name
-        run: echo "version_name=${GITHUB_REF##*/}" >> $GITHUB_ENV
-
-      # Modify build.gradle.kts to set versionName
-      - name: Modify build.gradle.kts to set versionName
+      # Extract version from tag (remove 'v' prefix if exists)
+      - name: Extract version from tag
+        id: extract_version
         run: |
-          VERSION_NAME=${{ env.version_name }}
-          sed -i "s/versionName \".*\"/versionName \"$VERSION_NAME\"/" ${{ env.main_project_module }}/build.gradle.kts
+          VERSION=${GITHUB_REF#refs/tags/}
+          VERSION=${VERSION#v}  # Remove 'v' prefix if present
+          echo "version=${VERSION}" >> $GITHUB_OUTPUT
+
+      # Update versionName in build.gradle.kts
+      - name: Update version in build.gradle.kts
+        run: |
+          sed -i "s/versionName = \".*\"/versionName = \"${{ steps.extract_version.outputs.version }}\"/g" ${{ env.main_project_module }}/build.gradle.kts
+          cat ${{ env.main_project_module }}/build.gradle.kts | grep versionName
 
       - name: Set Up JDK
         uses: actions/setup-java@v4
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
+          distribution: 'zulu'
           java-version: '17'
           cache: 'gradle'
 
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
 
-      # Run Tests Build
       - name: Run gradle tests
         run: ./gradlew test
 
-      # Run Build Project
       - name: Build gradle project
         run: ./gradlew build
 
-      # Create APK Release
       - name: Build apk release project (APK) - ${{ env.main_project_module }} module
         run: ./gradlew assemble
 
@@ -70,7 +69,7 @@ jobs:
           keyAlias: ${{ secrets.ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
-
+          
       - name: ConfigOrganze
         id: organize_config
         run: |
@@ -79,20 +78,20 @@ jobs:
           rm -rf ./release/app-release-un*
           rm -rf ./release/key.jks
           rm -rf ./release/output-metadata.json
-          tar -czvf  release.tar.gz ./release
+          tar -czvf release.tar.gz ./release
 
-      # Noted For Output [main_project_module]/build/outputs/apk/release/
       - name: Upload APK Release - ${{ env.repository_name }}
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.date_today }} - ${{ env.playstore_name }} - ${{ env.repository_name }} - APK(s) release generated
           path: ${{ env.main_project_module }}/build/outputs/apk/release/
-
+          
       - name: Release
         uses: softprops/action-gh-release@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ env.version_name }}
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
           files: |
             ${{ env.main_project_module }}/build/outputs/apk/release.tar.gz
