--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,6 @@
 #Sat Nov 25 14:14:28 CST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-#distributionUrl=https://mirrors.cloud.tencent.com/gradle/gradle-8.0-bin.zip
-distributionUrl=https://mirrors.cloud.tencent.com/gradle/gradle-8.0-all.zip
+distributionUrl=https://services.gradle.org/distributions/gradle-8.0-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dist
