--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 .externalNativeBuild
 .cxx
 local.properties
+settings.gradle.kts
+gradle/wrapper/gradle-wrapper.properties
+.github/workflows/generate-apk-release.yml
